// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDelegates has the expected html structure 1`] = `
<div
  class="ni-page"
  id="page-delegates"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Delegates
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <!---->
    <div
      class="delegates-container"
    >
      <div
        class="panel-sort"
      >
        <div
          class="panel-sort-container"
        >
          <div
            class="sort-by"
          >
            <div
              class="label"
            >
              
            </div>
          </div>
          <div
            class="sort-by name"
          >
            <div
              class="label"
            >
              Name
            </div>
          </div>
          <div
            class="sort-by percent_of_vote"
          >
            <div
              class="label"
            >
              % of Vote
            </div>
          </div>
          <div
            class="sort-by number_of_votes"
          >
            <div
              class="label"
            >
              # of Votes
            </div>
          </div>
          <div
            class="sort-by bonded_by_you"
          >
            <div
              class="label"
            >
              Bonded by You
            </div>
          </div>
        </div>
      </div>
      <div
        class="li-delegate"
      >
        <div
          class="li-delegate__values"
        >
          <div
            class="li-delegate__value checkbox"
          >
            <i
              class="fa fa-square-o"
            />
          </div>
          <div
            class="li-delegate__value name"
          >
            <span>
              <a
                class=""
                href="#/staking/delegates/pubkeyY"
              >
                  candidateY
              </a>
            </span>
          </div>
          <div
            class="li-delegate__value percent_of_vote"
          >
            <span>
              75%
            </span>
          </div>
          <div
            class="li-delegate__value number_of_votes num bar"
          >
            <span>
              30,000
            </span>
            <div
              class="bar"
              style="width: 100%;"
            />
          </div>
          <div
            class="li-delegate__value bonded_by_you"
          >
            <span>
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="li-delegate"
      >
        <div
          class="li-delegate__values"
        >
          <div
            class="li-delegate__value checkbox"
          >
            <i
              class="fa fa-square-o"
            />
          </div>
          <div
            class="li-delegate__value name"
          >
            <span>
              <a
                class=""
                href="#/staking/delegates/pubkeyX"
              >
                  candidateX
              </a>
            </span>
          </div>
          <div
            class="li-delegate__value percent_of_vote"
          >
            <span>
              25%
            </span>
          </div>
          <div
            class="li-delegate__value number_of_votes num bar"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 33%;"
            />
          </div>
          <div
            class="li-delegate__value bonded_by_you"
          >
            <span>
              0
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fixed-button-bar"
    >
      <div
        class="label"
      >
        <strong>
          0
        </strong>
         delegates selected
      </div>
      <a
        class="ni-btn btn__primary"
        disabled="disabled"
        href="#/staking/bond"
      >
        <span
          class="ni-btn-container ni-btn-icon-right"
        >
          <i
            aria-hidden="true"
            class="ni-btn-icon material-icons"
          >
            chevron_right
          </i>
          <span
            class="ni-btn-value"
          >
            Next
          </span>
        </span>
      </a>
    </div>
  </main>
</div>
`;

exports[`PageDelegates should filter the delegates 1`] = `
<div
  class="ni-page"
  id="page-delegates"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Delegates
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <div
      class="ni-modal-search"
    >
      <div
        class="ni-modal-search-container"
      >
        <input
          class="mousetrap ni-field"
          placeholder="Search..."
          type="text"
        />
        <button
          class="ni-btn"
        >
          <span
            class="ni-btn-container"
          >
            <i
              aria-hidden="true"
              class="ni-btn-icon material-icons"
            >
              close
            </i>
            <!---->
          </span>
        </button>
      </div>
    </div>
    <div
      class="delegates-container"
    >
      <div
        class="panel-sort"
      >
        <div
          class="panel-sort-container"
        >
          <div
            class="sort-by"
          >
            <div
              class="label"
            >
              
            </div>
          </div>
          <div
            class="sort-by name"
          >
            <div
              class="label"
            >
              Name
            </div>
          </div>
          <div
            class="sort-by percent_of_vote"
          >
            <div
              class="label"
            >
              % of Vote
            </div>
          </div>
          <div
            class="sort-by number_of_votes"
          >
            <div
              class="label"
            >
              # of Votes
            </div>
          </div>
          <div
            class="sort-by bonded_by_you"
          >
            <div
              class="label"
            >
              Bonded by You
            </div>
          </div>
        </div>
      </div>
      <div
        class="li-delegate"
      >
        <div
          class="li-delegate__values"
        >
          <div
            class="li-delegate__value checkbox"
          >
            <i
              class="fa fa-square-o"
            />
          </div>
          <div
            class="li-delegate__value name"
          >
            <span>
              <a
                class=""
                href="#/staking/delegates/pubkeyX"
              >
                  candidateX
              </a>
            </span>
          </div>
          <div
            class="li-delegate__value percent_of_vote"
          >
            <span>
              25%
            </span>
          </div>
          <div
            class="li-delegate__value number_of_votes num bar"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 33%;"
            />
          </div>
          <div
            class="li-delegate__value bonded_by_you"
          >
            <span>
              0
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fixed-button-bar"
    >
      <div
        class="label"
      >
        <strong>
          0
        </strong>
         delegates selected
      </div>
      <a
        class="ni-btn btn__primary"
        disabled="disabled"
        href="#/staking/bond"
      >
        <span
          class="ni-btn-container ni-btn-icon-right"
        >
          <i
            aria-hidden="true"
            class="ni-btn-icon material-icons"
          >
            chevron_right
          </i>
          <span
            class="ni-btn-value"
          >
            Next
          </span>
        </span>
      </a>
    </div>
  </main>
</div>
`;
